# embeem

./: Cargo.toml  README.md
crates/embeem-ast/: Cargo.toml
crates/embeem-ast/src/: ast.rs  expr.rs  infer.rs  lib.rs  mangle.rs  ops.rs  pretty.rs  resolve.rs  validate.rs
crates/embeem-ast/tests/: mangle_tests.rs  validate_examples.rs  validate_inline_embeem.rs
crates/embeem-codegen/: Cargo.toml
crates/embeem-codegen/src/: c.rs  codegen.rs  lib.rs  typescript.rs
crates/embeem-codegen/tests/: c_tests.rs  typescript_tests.rs
crates/embeem-parser/: Cargo.toml
crates/embeem-parser/src/: lib.rs  parser.rs
crates/embeem-parser/tests/: parser_tests.rs
crates/embeem-wasm/: Cargo.toml
crates/embeem-wasm/src/: codegen.rs  lib.rs
crates/embeem-wasm/tests/: wasm_tests.rs
doc/: DESUGARING.md  LANGUAGE_GUIDE.md  TOTALITY.md  VERSIONING.md
examples/: 01_blink.em  02_button.em  03_pwm_fade.em  04_analog_sensor.em  05_uart_echo.em  06_i2c_sensor.em  07_state_machine.em  08_bit_manipulation.em  09_timer_watchdog.em  10_floating_point.em
spec/: SPECIFICATION.md  embeem.schema.json
