[package]
name = "embeem-ast"
version = "0.1.0"
edition = "2024"
license.workspace = true
description = "AST types for the Embeem total programming language"
repository.workspace = true

[dependencies]

[dev-dependencies]
embeem-parser = { path = "../embeem-parser" }
syn = { version = "2", features = ["full", "visit"] }
walkdir = "2"
proc-macro2 = "1"

[features]
default = ["alloc"]
alloc = []
inference = ["alloc"]

[lints.rust]
unsafe_code = "forbid"
